<resources>
    <string name="app_name">popandroid</string>
    <string name="main_team">Team</string>
    <string name="info_btn_back">Team</string>
    <string name="info_txt_email">Email</string>
    <string name="info_txt_phone">Started</string>
    <string name="info_txt_anniversary">Company anniversary</string>
    <string name="info_txt_timezone">TimeZone</string>
    <string name="info_txt_starting_date">Phone</string>
    <string name="info_member_s_avatar">member\'s avatar</string>
    <string name="main_btn_log_out">log out</string>
    <string name="action_bar_btn_go_to_team_s_activity">go to team\'s activity</string>
    <string name="action_bar_btn_go_to_leaves_activity">go to leaves activity</string>
    <string name="action_bar_btn_go_to_calendar">go to calendar</string>
    <string name="card_leave_txt_pending">Pending</string>
    <string name="card_history_leave_txt_starting">Starting</string>
    <string name="card_leave_btn_refuse">Refuse</string>
    <string name="card_leave_btn_approve">Approve</string>
    <string name="leave_btn_upcoming">upcoming</string>
    <string name="leave_btn_all">All</string>
    <string name="leave_txt_title">Leaves</string>
    <string name="slider_txt_work_days">Work Days</string>
    <string name="slider_txt_sick_days">Sick Days</string>
    <string name="slider_txt_leave_days">Leave Days</string>
    <string name="slider_txt_national_day">National Day</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="login_edtxt_email">Email</string>
    <string name="login_btn_send_a_magic_link">Send a magic link</string>
</resources>
