<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lyt_action_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <ImageButton
        android:id="@+id/btn_team"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/transparent_button"
        android:src="@drawable/team_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_leaves"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/action_bar_btn_go_to_team_s_activity" />

    <ImageButton
        android:id="@+id/btn_leaves"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/transparent_button"
        android:src="@drawable/leaves_icon"
        android:onClick="checkLeaves"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_calendar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_team"
        android:contentDescription="@string/action_bar_btn_go_to_leaves_activity" />

    <ImageButton
        android:id="@+id/btn_calendar"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/transparent_button"
        android:src="@drawable/calendar_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_leaves"
        android:contentDescription="@string/action_bar_btn_go_to_calendar" />

</androidx.constraintlayout.widget.ConstraintLayout>