<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.MemberInformationActivity">

    <Button
        android:id="@+id/info_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:drawableStart="@drawable/arrow"
        android:onClick="onBack"
        android:text="@string/info_btn_back"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info_txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="SF Pro Text Regular"
        android:textColor="@color/textColorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lnr_information"
        app:layout_constraintEnd_toStartOf="@+id/info_img_avatar"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/info_img_avatar" />

    <ImageView
        android:id="@+id/info_img_avatar"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/info_member_s_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/oval1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lnr_information"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_corners_dark"
        app:layout_constraintBottom_toTopOf="@+id/lyt_include_action_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_img_avatar">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/info_txt_email"
            android:textColor="@color/textColorSecondary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/info_txt_email"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/info_txt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/info_txt_phone"
            android:textColor="@color/textColorSecondary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_txt_email" />

        <TextView
            android:id="@+id/info_txt_anniversary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/info_txt_anniversary"
            android:textColor="@color/textColorSecondary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_txt_timezone" />

        <TextView
            android:id="@+id/info_txt_timezone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/info_txt_timezone"
            android:textColor="@color/textColorSecondary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_txt_phone" />

        <TextView
            android:id="@+id/info_txt_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/info_txt_starting_date"
            android:textColor="@color/textColorSecondary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_txt_date" />

        <TextView
            android:id="@+id/info_txt_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/info_txt_bio"
            android:layout_width="0sp"
            android:layout_height="64sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corners_light"
            android:gravity="center"
            android:textColor="@color/textColorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_txt_anniversary"
            app:layout_constraintVertical_bias="0.69" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorSecondaryDark"
            android:onClick="slideUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/calendar_icon" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/slideup_lyt_calendar"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:background="@color/calendarBackground"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lnr_information">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30sp"
            android:layout_height="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/grab_indicator" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0sp"
            android:layout_height="200sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toTopOf="@+id/member_information_lyt_legend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/member_information_cldr_leaves"
            app:srcCompat="@drawable/calendar_separator" />

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/member_information_cldr_leaves"
            android:layout_width="0sp"
            android:layout_height="0sp"
            app:layout_constraintBottom_toTopOf="@+id/member_information_lyt_legend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

        </com.prolificinteractive.materialcalendarview.MaterialCalendarView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/member_information_lyt_legend"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="30sp"
                android:layout_height="35sp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/national" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="30sp"
                android:layout_height="35sp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/imageView6"
                app:srcCompat="@drawable/leave" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="30sp"
                android:layout_height="35sp"
                android:layout_marginStart="180dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/sick" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="30sp"
                android:layout_height="35sp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:srcCompat="@drawable/work" />

            <TextView
                android:id="@+id/member_information_txt_national_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="22dp"
                android:text="2"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/member_information_txt_leave_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="2"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintStart_toStartOf="@+id/textView16"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <TextView
                android:id="@+id/member_information_txt_sick_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="22dp"
                android:text="2"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/member_information_txt_work_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="2"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/slider_txt_national_day"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/member_information_txt_national_days" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slider_txt_leave_days"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/member_information_txt_leave_days"
                app:layout_constraintTop_toBottomOf="@+id/member_information_txt_leave_days" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slider_txt_sick_days"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/member_information_txt_sick_days"
                app:layout_constraintTop_toBottomOf="@+id/member_information_txt_sick_days" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/slider_txt_work_days"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/member_information_txt_work_days" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@id/lyt_include_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/lnr_information"
        app:layout_constraintVertical_bias="1.0">

        <include
            android:id="@+id/lyt_include_action_bar"
            layout="@layout/action_bar" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>